kubernetes/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ui
  name: ui
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: ui
