kubernetes/ui/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: ui
              servicePort: 80
